--- a/src/GUI/Resources/dark.css
+++ b/src/GUI/Resources/dark.css
@@ -36,10 +36,9 @@ QGroupBox::title
 	font-weight: 800;
 }
 
-QFrame,
-QMenu::separator
+QFrame
 {
-	border-bottom: 1px groove qlineargradient(x1: 0, y1: 0, x2: 1, y2: 0, stop:0 transparent, stop: 0.3 #242424, stop: 0.7 #242424, stop: 1.0 transparent);
+	border-bottom: 1px solid qlineargradient(x1: 0, y1: 0, x2: 1, y2: 0, stop:0 transparent, stop: 0.3 #242424, stop: 0.7 #242424, stop: 1.0 transparent);
 	background: transparent;
 }
 
@@ -366,7 +365,7 @@ QComboBox
 
 QComboBox::drop-down
 {
-	width: 30%;
+	width: 4.5ex;
 	border-left: 1px solid #242424;
 	border-top-right-radius: 3px;
 	border-bottom-right-radius: 3px;
@@ -491,8 +490,6 @@ QTabWidget::pane
 	background-color: #383838;
 	border: 1px solid #2c2c2c;
 	top: -1px;
-	right: -1px;
-
 }
 
 GUI_TagEdit QFrame
@@ -515,11 +512,8 @@ QTabBar::tab
 	border-top-right-radius: 2px;
 	min-width: 4em;
 	padding: 3px 5px 3px 5px;
-	/*max-height: 16px;
-	min-height: 16px;*/
 	max-height: 6ex;
 	min-height: 1ex;
-	
 }
 
 PlaylistTabBar::tab:last
