--- a/src/GUI/Plugins/Broadcasting/GUI_Broadcast.ui
+++ b/src/GUI/Plugins/Broadcasting/GUI_Broadcast.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>491</width>
-    <height>98</height>
+    <width>364</width>
+    <height>67</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -29,7 +29,33 @@
    <property name="verticalSpacing">
     <number>5</number>
    </property>
-   <item row="0" column="0" colspan="2">
+   <item row="2" column="0" colspan="2">
+    <widget class="Gui::ComboBox" name="combo_clients">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="focusPolicy">
+      <enum>Qt::ClickFocus</enum>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="2">
+    <widget class="MenuToolButton" name="btn_menu">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Maximum" vsizetype="Preferred">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="text">
+      <string>...</string>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="0" colspan="3">
     <layout class="QHBoxLayout" name="horizontalLayout_2">
      <item>
       <widget class="QLabel" name="lab_status">
@@ -82,73 +108,6 @@
      </item>
     </layout>
    </item>
-   <item row="2" column="0" colspan="2">
-    <layout class="QHBoxLayout" name="horizontalLayout_3">
-     <property name="spacing">
-      <number>5</number>
-     </property>
-     <item>
-      <spacer name="horizontalSpacer_2">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>40</width>
-         <height>20</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-     <item>
-      <widget class="QPushButton" name="btn_dismiss">
-       <property name="focusPolicy">
-        <enum>Qt::ClickFocus</enum>
-       </property>
-       <property name="text">
-        <string>Dismiss</string>
-       </property>
-       <property name="icon">
-        <iconset resource="../../Resources/Icons.qrc">
-         <normaloff>:/Icons/delete.svg.png</normaloff>:/Icons/delete.svg.png</iconset>
-       </property>
-       <property name="iconSize">
-        <size>
-         <width>16</width>
-         <height>16</height>
-        </size>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="btn_dismiss_all">
-       <property name="focusPolicy">
-        <enum>Qt::ClickFocus</enum>
-       </property>
-       <property name="text">
-        <string>Dismiss all</string>
-       </property>
-       <property name="icon">
-        <iconset resource="../../Resources/Icons.qrc">
-         <normaloff>:/Icons/delete.svg.png</normaloff>:/Icons/delete.svg.png</iconset>
-       </property>
-       <property name="iconSize">
-        <size>
-         <width>16</width>
-         <height>16</height>
-        </size>
-       </property>
-      </widget>
-     </item>
-    </layout>
-   </item>
-   <item row="1" column="0" colspan="2">
-    <widget class="Gui::ComboBox" name="combo_clients">
-     <property name="focusPolicy">
-      <enum>Qt::ClickFocus</enum>
-     </property>
-    </widget>
-   </item>
   </layout>
  </widget>
  <customwidgets>
@@ -156,6 +115,11 @@
    <class>Gui::ComboBox</class>
    <extends>QComboBox</extends>
    <header>GUI/Utils/Widgets/ComboBox.h</header>
+  </customwidget>
+  <customwidget>
+   <class>MenuToolButton</class>
+   <extends>QPushButton</extends>
+   <header location="global">GUI/Utils/MenuTool/MenuTool.h</header>
   </customwidget>
  </customwidgets>
  <resources>
